runners/services: Do not parse exec of flatpaks

This way we avoid false positives, especially from the RDN names.
For example typing "kde" in order to launch KDevelop would cause the
"ork.kde.kwordquiz" snap to show up too.

BUG: 461241